Fixes search next/previous buttons wrapping in Firefox.
For me, a 7px margin was just enough to cause the buttons to wrap and display on top of each other. I put it to 5px just to be safe, even though 6px also worked for me.

--- a/packages/documentsearch/style/base.css
+++ b/packages/documentsearch/style/base.css
@@ -149,7 +149,7 @@
   background-repeat: no-repeat;
   background-position: center;
   vertical-align: middle;
-  margin: 1px 7px 2px;
+  margin: 1px 5px 2px;
 }
 
 .jp-DocumentSearch-up-down-button {
